First implementation of the search api endpoint.
